--- a/STM32/pan_tilt/pan_tilt.ioc
+++ b/STM32/pan_tilt/pan_tilt.ioc
@@ -18,23 +18,24 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PC9
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PC10
-Mcu.Pin14=PC11
-Mcu.Pin15=PB3
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM3_VS_no_output1
+Mcu.Pin10=PC8
+Mcu.Pin11=PC9
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PC10
+Mcu.Pin15=PC11
+Mcu.Pin16=PB3
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM3_VS_no_output1
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PC8
-Mcu.PinsNb=18
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -56,6 +57,8 @@ NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.Locked=true
+PA1.Signal=S_TIM2_CH2
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -186,8 +189,11 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Channel-PWM Generation2 CH2
 TIM2.Period=20000-1
 TIM2.Prescaler=84-1
 TIM3.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
