level 5단계 각도 5,4,3,2,1 도씩 넣어둔 상태, 2초 동안 uart인터럽트 안들어어오면 원위치

--- a/STM32/pan_tilt_freeRTOS/pan_tilt_freeRTOS.ioc
+++ b/STM32/pan_tilt_freeRTOS/pan_tilt_freeRTOS.ioc
@@ -16,7 +16,7 @@ Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=servo_task,24,256,start_servo_task,Default,NULL,Dynamic,NULL,NULL;rx_task,8,256,start_rx_task,Default,NULL,Dynamic,NULL,NULL;cmd_task,8,256,start_cmd_task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=servo_task,24,256,start_servo_task,Default,NULL,Dynamic,NULL,NULL;rx_task,8,256,start_rx_task,Default,NULL,Dynamic,NULL,NULL;cmd_task,8,256,start_cmd_task,Default,NULL,Dynamic,NULL,NULL;idle_task,8,256,start_idle_task,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -198,8 +198,9 @@ TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Presca
 TIM2.Period=20000-1
 TIM2.Prescaler=84-1
 TIM3.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-Output Compare1 No Output,Prescaler
-TIM3.Prescaler=84-1
+TIM3.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
+TIM3.Period=100-1
+TIM3.Prescaler=8400-1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
@@ -210,3 +211,4 @@ VP_TIM3_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
 board=NUCLEO-F411RE
 boardIOC=true
+rtos.0.ip=FREERTOS
